# NumPy-OpenCL-Integration-Practice

./: Makefile  openclboilerplate.md  pyproject.toml  pythonboilerplate.md  script.sh  setup.py  test.py
matrix_opencl/: __init__.py
matrix_opencl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
matrix_opencl/core/: __init__.py  add.cl  matrix_add.c  matrix_add.h  numpy_interface.cpp
