[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix_opencl"
version = "0.1.0"
description = "OpenCL-accelerated matrix operations with NumPy interface"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Your Name", email = "your.email@example.com"}]